use nanoids as spell identifiers
